content update and fix button being blue on iOS

--- a/src/index.css
+++ b/src/index.css
@@ -49,6 +49,7 @@ button {
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
+  color: white;
 }
 @media (hover: hover) {
   button:hover {
